--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite -c vite.popup.config.js",
-    "build": "vite build -c vite.popup.config.js && vite build -c vite.content.config.js && vite build -c vite.background.config.js && node build.js",
+    "build": "rimraf build && vite build -c vite.popup.config.js && vite build -c vite.content.config.js && vite build -c vite.background.config.js && node build.js",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview -c vite.popup.config.js"
   },
   "dependencies": {
     "antd": "^5.12.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
